fix svg on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -113,12 +113,15 @@
 
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   gap: 1.6rem;
   color: var(--color-text);
   text-decoration: none;
 
   & svg {
+    background-color: red;
+    display: block;
+    margin-inline: auto;
     fill: var(--color-text);
   }
 
